--- a/AlquilerMotosAngular/src/app/Componentes/inicio/inicio.html
+++ b/AlquilerMotosAngular/src/app/Componentes/inicio/inicio.html
@@ -1,25 +1,17 @@
 <div class="dashboard-container">
-
   <h1 class="brand-title">
     ECO-MOVE
-    <span class="brand-subtitle">
-      Gestión de Movilidad Sostenible
-    </span>
+    <span class="brand-subtitle">Gestión de Movilidad Sostenible</span>
   </h1>
 
   <div class="grid-layout">
-
-    <!-- COLUMNA OPERACIONES -->
     <div>
       <app-alquiler></app-alquiler>
     </div>
 
-    <!-- COLUMNA REPORTES -->
     <div class="right-column">
       <app-devolucion></app-devolucion>
       <app-reportes></app-reportes>
     </div>
-
   </div>
-
 </div>
