--- a/AlquilerMotosAngular/src/app/app.html
+++ b/AlquilerMotosAngular/src/app/app.html
@@ -3,9 +3,11 @@
     <span class="logo">🌱 Eco-Move</span>
 
     <nav>
-      <a routerLink="/" class="nav-link">Inicio</a>
-      <!-- <a class="nav-link disabled">Flota</a>
-      <a class="nav-link disabled">Soporte</a> -->
+      <a routerLink="/inicio" routerLinkActive="active" class="nav-link">Inicio</a>
+      <a routerLink="/alquilerResumen" routerLinkActive="active" class="nav-link">Alquiler</a>
+      <a routerLink="/devolucionesResumen" routerLinkActive="active" class="nav-link">Devoluciones</a>
+      <a routerLink="/reportesResumen" routerLinkActive="active" class="nav-link">Reportes</a>
+      <a routerLink="/administrar" routerLinkActive="active" class="nav-link admin-link">Administrar</a>
     </nav>
   </div>
 </header>
